# flock

./: .gitignore  .travis.yml  LICENSE.md  Makefile.am  README  README.md  autogen.sh  configure.ac
.github/workflows/: ci.yml
config/: tap-driver.sh
man/: flock.1.md  flock.1.ronn  index.txt
script/: bootstrap  test
src/: flock.c
t/: default.bats  fcntl.bats  smartos.bats
